# chatdelta-cli

./: CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  WISHLIST.md
docs/: debate-example.md
src/: cli.rs  logging.rs  main.rs  metrics_display.rs  output.rs
src/debate/: mod.rs  orchestrator.rs  prompts.rs  protocol.rs  renderer.rs  types.rs
